--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,10 @@
 {
-    "buildCommand": "npm run build && npx prisma generate",
-    
-      "build": {
-        "env": {
-          "PRISMA_CLIENT_ENGINE_TYPE": "binary",
-            "CLEAR_CACHE": "true"
-        }
-      }
+  "build": {
+    "env": {
+      "PRISMA_CLIENT_ENGINE_TYPE": "binary"
+    },
+    "hooks": {
+      "build": "npm run build && npx prisma generate"
+    }
   }
-  
+}
