--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,4 @@
 {
-  "build": {
-    "env": {
-      "PRISMA_CLIENT_ENGINE_TYPE": "binary"
-    },
-    "hooks": {
-      "build": "npm run build && npx prisma generate"
-    }
-  }
+    "buildCommand": "next build",
+      "cleanUrls": true
 }
